--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "validate": "node scripts/validate-data.js"
   },
   "dependencies": {
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
